sendQR code và clean app
